# JADEpy

./: README.md  pyproject.toml
scripts/: bump_version.py
src/jadepy/: __init__.py  database.py  utils.py
