[project]
name = "jadepy"
version = "0.1.0"
description = "Slim python package for accessing the JADE database"
readme = "README.md"
authors = [
    { name = "Kevin Bullaughey", email = "kevin.bullaughey@centurytx.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
