[project]
name = "jadepy"
version = "0.2.0"
description = "Slim python package for accessing the JADE database"
readme = "README.md"
authors = [
    { name = "Kevin Bullaughey", email = "kevin.bullaughey@centurytx.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.5.0",
]
